# MarkoLabs

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  activate.bat  dashboard.py  docker-compose.yml  manage.bat  pyproject.toml  requirements.txt  run_dashboard.vbs  vercel.json
assets/: styles.css
src/: config.py
src/components/: charts.py  metrics.py
src/data/: loader.py
src/layouts/: dashboard.py
